# Protenix-Dock

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  environment.yml  license_header.txt  requirements.txt  setup.py
engine/: CMakeLists.txt
engine/cmake/: FindVeTos.cmake  version.cmake
engine/include/bytedock/: version.h
engine/include/bytedock/core/: aggregator.h  conf.h  constant.h  data.h  entrance.h  evaluator.h  factory.h  grid.h  interaction.h  optimizer.h  pair.h  reader.h  scorer.h  searcher.h  source.h  system.h  task.h  writer.h
engine/include/bytedock/ext/: counter.h  logging.h  pfile.h  progress.h  tos.h
engine/include/bytedock/lib/: dtype.h  error.h  math.h  printer.h  queue.h  random.h  utility.h
engine/src/cli/: bdgen.cpp  bdock.cpp  bdopt.cpp  bdscr.cpp
engine/src/core/: aggregator.cpp  conf.cpp  data.cpp  entrance.cpp  evaluator.cpp  factory.cpp  grid.cpp  interaction.cpp  optimizer.cpp  reader.cpp  scorer.cpp  searcher.cpp  source.cpp  system.cpp  writer.cpp
engine/src/ext/: counter.cpp  logging.cpp  pfile.cpp  progress.cpp  tos.cpp
engine/src/lib/: math.cpp  random.cpp
engine/src/pyb/: api.cpp
engine/utest/: test_conformer.cpp  test_interaction.cpp  test_lib.h  test_math.cpp  test_optimizer.cpp  test_random.cpp  test_scorer.cpp
examples/: 5s8i_ligand_prepared.sdf  5s8i_pocket.config  5sak_ligand_ref.sdf
pxdock/: __init__.py  engine.py
pxdock/common/: __init__.py  amber_forcefield.py  constants.py  logger.py  pdbqt_utils.py  rmsd_calculator.py  utilities.py
pxdock/data/: pscore-v7_and_bscore-fake.json  residue_params.json  tstrain_params.json
pxdock/data/amberff/: frcmod.hemall  heme_all.in
pxdock/dock/: docking.py  utils.py
pxdock/geometry/: geometry.py  rotation.py  tree.py
pxdock/parser/: base.py  cofactor.py  ffdata.py  ligand.py  ligand_ffdata.py  ligand_rbonds.py  molecule_toolbox.py  receptor.py
pxdock/pipeline/: generate_random_conformer.py  get_pocket_info.py  prepare_ligand.py  prepare_receptor.py
pxdock/vina/: prepare_receptor.py  protein.py  vina_docking.py
test/: test_data_prepare.py  test_protenix_dock.py  test_rmsd.py
